# Dataset_Collector

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  3D_MODELING_PIPELINE_V1_TO_V2_PLAN.md  ADAPT_CYBER_THREAT_MODELING_PIPELINE.md  ADAPT_KG_NAV_PIPELINE.md  ADAPT_PIPELINE_3D.md  AGRI_CIRCULAR_ADAPTATION.md  AGRI_CIRCULAR_PIPELINE_v1.2_ADAPTATION.md  AUDIT_REPORT_2026-01-15.md  AUDIT_REPORT_2026.md  A_GRADE_PATCH_CHECKLIST_CONCRETE.md  A_GRADE_REMAINING_WORK.md  A_GRADE_STATUS.md  BIOLOGY_PIPELINE_ADAPTATION_PLAN.md  BIOLOGY_PIPELINE_V2_ADAPTATION_PLAN.md  BUG_REPORT.md  BUG_SCAN_REPORT_2026-01-15.md  BUG_SCAN_VERIFICATION_2026-01-15.md  CHANGELOG.md  CHEM_PIPELINE_V2_ADAPTATION.md  CLAUDE_CODE_CHECKLIST.md  CODE_OF_CONDUCT.md  CODE_PIPELINE_V2_ADAPTATION_PLAN.md  COLLECTOR_PIPELINE_REFACTOR_ALL_PIPELINES.md  COMPLETE_ISSUES_AND_FIXES.md  CONTRIBUTING.md  CYBER_PIPELINE_V2_ADAPTATION.md  DATASET_COLLECTOR_FIXES.md  DATASET_COLLECTOR_OPTIMAL_FIXLIST_2026-01-07.md  DATASET_COLLECTOR_REPO_ISSUES_AND_UPDATES_2026-01-07.md  DATASET_COLLECTOR_V2_COLLECTOR_ONLY_PATCHLIST.md  DATASET_COLLECTOR_V2_FIXLIST_COLLECTOR_ONLY.md  DATASET_COLLECTOR_V2_NEXT_REPO_UPDATES.md  DATASET_COLLECTOR_V2_REMAINING_FIXES.md  DATASET_COLLECTOR_V2_REMAINING_REPO_UPDATES.md  DATASET_COLLECTOR_V2_REPO_FIXES.md  DIFFICULTY_SCHEMA_UPGRADE.md  Dataset_Collector_Refactoring_Checklist.md  (+67 more)
3d_modeling_pipeline_v2/: README.md  acquire_plugin.py  acquire_worker.py  catalog_builder.py  denylist.yaml  difficulties_3d.yaml  difficulty_worker.py  field_schemas.yaml  license_map.yaml  merge_worker.py  mesh_worker.py  pipeline_driver.py  pmc_worker.py  requirements.txt  review_queue.py  run_pipeline.sh  targets_3d.yaml  todo.txt  yellow_screen_worker.py  yellow_scrubber.py
3d_modeling_v1/: README.md  catalog_builder.py  denylist.yaml  download_worker.py  field_schemas.yaml  license_map.yaml  pmc_worker.py  review_queue.py  run_pipeline.sh  targets.yaml  todo.txt  yellow_scrubber.py
agri_circular_pipeline_v1/: README.md  catalog_builder.py  download_worker.py  field_schemas.yaml  pipeline_driver.py  requirements.txt  run_pipeline.sh  targets.yaml  todo.txt
agri_circular_pipeline_v2/: README.md  acquire_worker.py  catalog_builder.py  difficulties_agri_circular.yaml  difficulty_worker.py  download_worker_legacy.py  field_schemas.yaml  merge_worker.py  pipeline_driver.py  pmc_worker.py  requirements.txt  review_queue.py  run_pipeline.sh  targets.yaml  targets_agri_circular.yaml  todo.txt  yellow_screen_worker.py  yellow_scrubber.py  yellow_scrubber_legacy.py
biology_pipeline_v1/: README.md  README_gov_addons.md  catalog_builder.py  download_worker.py  license_map.yaml  pipeline_driver.py  requirements.txt  run_pipeline.sh  targets.yaml  todo.txt  yellow_scrubber.py
biology_pipeline_v2/: README.md  acquire_worker.py  catalog_builder.py  difficulties_biology.yaml  difficulty_worker.py  field_schemas.yaml  license_map.yaml  merge_worker.py  pipeline_driver.py  pmc_worker.py  requirements.txt  review_queue.py  run_pipeline.sh  targets_biology.yaml  todo.txt  yellow_screen_worker.py  yellow_scrubber.py
chem_pipeline_v07/: catalog_builder.py  pipeline_driver.py  pmc_worker.py  run_pipeline.sh  targets.yaml  todo.txt
chem_pipeline_v08/: README.md  denylist.yaml  download_worker.py  requirements.txt  review_queue.py  yellow_scrubber.py
chem_pipeline_v09/: README.md  denylist.yaml  download_worker.py  pipeline_driver.py  run_pipeline.sh  todo.txt  yellow_scrubber.py
chem_pipeline_v1/: README.md  catalog_builder.py  download_worker.py  pipeline_driver.py  pmc_worker.py  requirements.txt  review_queue.py  run_pipeline.sh  targets.yaml  todo.txt  yellow_scrubber.py
chem_pipeline_v1.1/: Dockerfile  README.md  catalog_builder.py  docker-compose.yaml  download_worker.py  field_schemas.yaml  license_map.yaml  pipeline_driver.py  pmc_worker.py  requirements-lock.txt  requirements.txt  review_queue.py  run_pipeline.sh  targets.yaml  todo.txt  yellow_scrubber.py
chem_pipeline_v2/: README.md  acquire_worker.py  catalog_builder.py  difficulties_chem.yaml  difficulty_worker.py  field_schemas.yaml  merge_worker.py  pipeline_driver.py  pmc_worker.py  requirements.txt  review_queue.py  run_pipeline.sh  targets_chem.yaml  todo.txt  yellow_screen_worker.py  yellow_scrubber.py
code_pipeline_v1/: CODE_PIPELINE_ADAPTATION.md  README.md  catalog_builder.py  code_worker.py  field_schemas.yaml  license_map.yaml  pipeline_driver.py  run_pipeline.sh  todo.txt
code_pipeline_v2/: README.md  acquire_plugin.py  acquire_worker.py  catalog_builder.py  code_worker.py  denylist.yaml  difficulties_code.yaml  difficulty_worker.py  field_schemas.yaml  license_map.yaml  merge_worker.py  pipeline_driver.py  requirements.txt  review_queue.py  run_pipeline.sh  targets_code.yaml  todo.txt  yellow_screen_worker.py  yellow_scrubber.py
collector_core/: __init__.py  __version__.py  acquire_limits.py  acquire_strategies.py  catalog_builder.py  companion_files.py  config_validator.py  dataset_root.py  dc_cli.py  denylist_matcher.py  exceptions.py  generic_workers.py  logging_config.py  merge.py  metrics.py  network_utils.py  output_contract.py  pipeline_cli.py  pipeline_driver_base.py  pipeline_factory.py  pipeline_registry.py  pipeline_spec.py  pipeline_specs_registry.py  pipeline_version.py  pmc_worker.py  policy_snapshot.py  rate_limit.py  result.py  review_queue.py  secrets.py  utils.py  yaml_lite.py  yellow_review_helpers.py  yellow_screen_chem.py  yellow_screen_common.py  yellow_screen_dispatch.py  yellow_screen_econ.py  yellow_screen_kg_nav.py  yellow_screen_nlp.py  yellow_screen_safety.py  (+1 more)
configs/: pipelines.yaml
cyber_pipeline_v1/: README.md  catalog_builder.py  download_worker.py  license_map.yaml  pipeline_driver.py  requirements.txt  review_queue.py  run_pipeline.sh  todo.txt  yellow_scrubber.py
cyber_pipeline_v2/: README.md  acquire_worker.py  advisory_worker.py  catalog_builder.py  denylist.yaml  difficulties_cyber.yaml  difficulty_worker.py  field_schemas.yaml  license_map.yaml  merge_worker.py  nvd_worker.py  pmc_worker.py  (+9 more)
(+727 files in other folders)
