[tool.ruff]
line-length = 100
target-version = "py310"
include = ["**/*.py"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[project]
name = "dataset-collector"
description = "Dataset collection pipelines and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.2,<2.33",
  "boto3>=1.34.0",
  "datasets>=2.20.0,<2.21",
  "pyarrow>=15.0.0",
  "jsonschema>=4.22.0",
  "pypdf>=4.0.0",
  "pdfminer.six>=20221105",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pytest_httpserver",
  "jupyterlab",
  "ipykernel",
]

[project.scripts]
dc-review = "collector_core.review_queue:main"
dc-catalog = "collector_core.catalog_builder:main"
dc-pipeline = "collector_core.pipeline_cli:main"

[tool.setuptools.dynamic]
version = { attr = "collector_core.__version__.__version__" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
