[tool.ruff]
line-length = 100
target-version = "py310"
include = ["**/*.py"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[project]
name = "dataset-collector"
description = "Dataset collection pipelines and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.2,<2.33",
  "boto3>=1.34.0",
  "datasets>=2.20.0,<2.21",
  "pyarrow>=15.0.0",
  "jsonschema>=4.22.0",
  "zstandard>=0.22.0",
  "pypdf>=4.0.0",
  "pdfminer.six>=20221105",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis>=6.0.0",
  "ruff",
  "mypy>=1.8.0",
  "boto3-stubs",
  "types-PyYAML",
  "types-requests",
  "types-jsonschema",
  "yamllint",
  "pytest_httpserver",
  "jupyterlab",
  "ipykernel",
  "pre-commit>=3.6.0",
]

observability = [
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-exporter-otlp>=1.22.0",
  "prometheus-client>=0.19.0",
]

async = [
  "aiohttp>=3.9.0",
  "httpx>=0.27.0",
]

all = [
  "dataset-collector[dev,observability,async]",
]

[project.scripts]
# Main CLI commands
dc-review = "collector_core.review_queue:main"
dc-catalog = "collector_core.catalog_builder:main"
dc-pipeline = "collector_core.pipeline_cli:main"
dc = "collector_core.dc_cli:main"
# Tooling / validation
dc-preflight = "tools.preflight:main"
dc-validate-repo = "tools.validate_repo:main"
dc-validate-yaml-schemas = "tools.validate_yaml_schemas:main"
dc-check-constraints = "tools.check_constraints:main"
# Maintenance
dc-sync-wrappers = "tools.sync_pipeline_wrappers:main"
dc-clean-repo-tree = "tools.clean_repo_tree:main"
dc-touch-updated-utc = "tools.touch_updated_utc:main"
dc-make-release-zip = "tools.make_release_zip:main"
dc-init-layout = "tools.init_layout:main"
dc-generate-pipeline = "tools.generate_pipeline:main"
dc-migrate-pipeline-structure = "tools.migrate_pipeline_structure:main"
dc-update-wrapper-deprecations = "tools.update_wrapper_deprecations:main"
dc-validate-metrics-outputs = "tools.validate_metrics_outputs:main"
dc-build-natural-corpus = "tools.build_natural_corpus:main"
dc-validate-output-contract = "tools.output_contract:main"
dc-validate-pipeline-specs = "tools.validate_pipeline_specs:main"

[tool.setuptools.dynamic]
version = { attr = "collector_core.__version__.__version__" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
collector_core = ["py.typed", "schemas/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
addopts = "--cov=collector_core --cov=tools --cov-report=xml --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "boto3",
  "boto3.*",
  "botocore",
  "botocore.*",
  "datasketch",
  "datasketch.*",
  "datasets",
  "datasets.*",
  "lxml",
  "lxml.*",
  "pdfminer",
  "pdfminer.*",
  "pyarrow",
  "pyarrow.*",
  "pypdf",
  "pypdf.*",
  "tqdm",
  "tqdm.*",
  "trafilatura",
  "trafilatura.*",
  "zstandard",
  "zstandard.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "collector_core.classification.*",
  "collector_core.evidence.*",
  "collector_core.acquire_strategies",
  "collector_core.merge.*",
  "collector_core.yellow_screen_standard",
  "collector_core.yellow_screen_common",
  "collector_core.yellow_screen_dispatch",
  "collector_core.yellow_scrubber_base",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "tools.*",
]
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
